# datahub-project

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  TODO.md  codex.md  pyproject.toml
datahub/: __init__.py  cli.py  config.py  db.py  dedup.py
datahub/connectors/: __init__.py  base.py
datahub/connectors/finance/: __init__.py  csv_import.py  simplefin.py
datahub/connectors/fitness/: __init__.py  apple_health.py  oura.py  peloton.py  tonal.py
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_dedup.py
tests/connectors/: __init__.py  test_apple_health.py  test_csv_import.py
tests/web/: __init__.py  test_app.py
web/: __init__.py  app.py
web/templates/: base.html  dashboard.html  finance.html  fitness.html
